--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: cicddemo
+service: cicdmultisourcedemo
 
 provider:
   name: aws
@@ -11,7 +11,7 @@ provider:
 functions:
   crypto_test:
     handler: handler.endpoint
-    name: cicddemolambda
+    name: cicdmultisourcedemolambda
     role: arn:aws:iam::394013177213:role/lambda-service-role
     layers:
       - arn:aws:lambda:us-west-2:394013177213:layer:KiraLambdaLayer:4
